--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,7 @@ figcaption .image-credit {
 <a name="top">
   </a><div id="pagebox"><a name="top">
   <hline>
-  </hline></a><h4><a name="top"></a><a href="#consulting">Consulting</a> | <a href="#clients">Clients</a> | <a href="#workshops">Workshops/Speaking</a> | <a href="#writing">Writing</a> | <a href="#bio">Bio and CV</a>  | <a href="#contact">Contact</a> </h4>
+  </hline></a><h4><a name="top"></a><a href="#consulting">Home</a> | <a href="#clients">Archive</a> | <a href="#workshops">Work/Projects</a> | <a href="#writing">Contact</a> | <a href="#bio">Support</a></h4>
   <hline>
   <a name="top">
   {{ content }}
